--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,26 +10,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MySleepTracker">
         <activity
-            android:name=".MainActivity"
+            android:name=".StartActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
+            android:name=".MainActivity"
+            android:exported="true"/>
+        <activity
             android:name=".stat_activity"
             android:exported="true" />
         <activity
-            android:name=".start_activity"
+            android:name=".bedtime_activity"
             android:exported="true" />
         <activity
-            android:name=".bedtime_activity"
-            android:exported="false" />
-        <activity
             android:name=".night_activity"
-            android:exported="true"/>
-
+            android:exported="true" />
     </application>
 
 </manifest>
